--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@100xdevs/medium-common": "^1.0.0",
     "@anujd10/blogify-common": "^1.0.1",
     "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.3.0",
